--- a/src/makefile.linux-mingw
+++ b/src/makefile.linux-mingw
@@ -2,10 +2,10 @@
 # Distributed under the MIT/X11 software license, see the accompanying
 # file COPYING or http://www.opensource.org/licenses/mit-license.php.
 
-DEPSDIR:=/usr/i686-w64-mingw32
+DEPSDIR:=/opt/mingw/usr
 
-CC := i686-w64-mingw32-gcc
-CXX := i686-w64-mingw32-g++
+CC := /opt/mingw/usr/bin/i686-pc-mingw32-gcc
+CXX := /opt/mingw/usr/bin/i686-pc-mingw32-g++
 
 USE_UPNP:=0
 USE_IPV6:=1
@@ -14,7 +14,8 @@ INCLUDEPATHS= \
  -I"$(CURDIR)" \
  -I"$(CURDIR)"/obj \
  -I"$(DEPSDIR)/include" \
- -I"$(DEPSDIR)"
+ -I"$(DEPSDIR)" \
+ -I"$(DEPSDIR)/i686-pc-mingw32/include/boost"
 
 LIBPATHS= \
  -L"$(DEPSDIR)/lib"
@@ -35,6 +36,8 @@ DEBUGFLAGS=-g
 xCXXFLAGS=-O2 -w -Wall -Wextra -Wformat -Wformat-security -Wno-unused-parameter $(DEBUGFLAGS) $(DEFS) $(INCLUDEPATHS) $(CXXFLAGS)
 # enable: ASLR, DEP and large address aware
 xLDFLAGS=-Wl,--dynamicbase -Wl,--nxcompat -Wl,--large-address-aware -static-libgcc -static-libstdc++ $(LDFLAGS)
+
+PREFIX=/usr/include/boost
 
 TESTDEFS = -DTEST_DATA_DIR=$(abspath test/data)
 
@@ -101,7 +104,7 @@ all: mahacoind.exe
 DEFS += -I"$(CURDIR)/leveldb/include"
 DEFS += -I"$(CURDIR)/leveldb/helpers"
 leveldb/libleveldb.a:
-	@echo "Building LevelDB ..." && cd leveldb && TARGET_OS=OS_WINDOWS_CROSSCOMPILE $(MAKE) CC=$(CC) CXX=$(CXX) OPT="$(xCXXFLAGS)" libleveldb.a libmemenv.a && i686-w64-mingw32-ranlib libleveldb.a && i686-w64-mingw32-ranlib libmemenv.a && cd ..
+	@echo "Building LevelDB ..." && cd leveldb && TARGET_OS=OS_WINDOWS_CROSSCOMPILE $(MAKE) CC=$(CC) CXX=$(CXX) OPT="$(xCXXFLAGS)" libleveldb.a libmemenv.a && /opt/mingw/usr/bin/i686-pc-mingw32-ranlib libleveldb.a && /opt/mingw/usr/bin/i686-pc-mingw32-ranlib libmemenv.a && cd ..
 
 obj/build.h: FORCE
 	/bin/sh ../share/genbuild.sh obj/build.h
